appId: com.qazandoqafood
---
- tapOn: ${output.itemPage.cupomField}
- inputText: ${CUPOM}
- hideKeyboard
- doubleTapOn: ${output.purchasePage.addCupom}
