appId: com.qazandoqafood
---
- tapOn: ${output.login.email}
- inputText: ${USERNAME}
- tapOn: ${output.login.password}
- inputText: ${PASSWORD}

- hideKeyboard
- tapOn: ${output.login.loginButton}
