appId: com.qazandoqafood
---
- tapOn: "Pastelaria da Maria"

- repeat:
    times: 10
    commands:
      - tapOn:
          point: "95%,55%"

- assertVisible: "R$ 220,00"
- tapOn:
    id: "open-cart-button"
- tapOn:
    id: "confirm-order-button"
- inputText: "CUPOM50"
- tapOn: "Adicionar"
- scrollUntilVisible:
    element: "Dinheiro"
- tapOn: "Dinheiro"
- tapOn:
    id: "do-order-button"
- assertVisible: "Pedido realizado"
